--- a/less/agency.less
+++ b/less/agency.less
@@ -110,7 +110,7 @@ h1, h2, h3, h4, h5, h6 {
     .nav {
         li {
             a {
-                .heading-font;
+                .body-font;
                 font-weight: 400;
                 letter-spacing: 1px;
                 color: white;
