--- a/less/mixins.less
+++ b/less/mixins.less
@@ -52,18 +52,18 @@
 // Font Mixins
 
 .serif-font() {
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Merriweather", sans-serif;
 }
 
 .script-font() {
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  font-family: "Special Elite", sans-serif;
 }
 
 .body-font() {
-  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Merriweather", sans-serif;
 }
 
 .heading-font() {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Special Elite", sans-serif;
   text-transform: uppercase;
 }
