--- a/less/agency.less
+++ b/less/agency.less
@@ -225,7 +225,19 @@ section {
         font-size: 40px;
         margin-top: 0;
         margin-bottom: 15px;
+        
     }
+    h4.player-heading {
+    font-size:30px;
+    margin-top: 0;
+    magin-bottom: 15px;
+    }
+    
+    
+    
+    
+    
+    
     h3.section-subheading {
         font-size: 16px;
         .serif-font;
