--- a/less/mixins.less
+++ b/less/mixins.less
@@ -52,18 +52,18 @@
 // Font Mixins
 
 .serif-font() {
-  font-family: "Merriweather", sans-serif;
+  font-family: 'Baloo Chettan',sans-serif;
 }
 
 .script-font() {
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
 }
 
 .body-font() {
-  font-family: "Merriweather", sans-serif;
+  font-family: 'Baloo Chettan', sans-serif;
 }
 
 .heading-font() {
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
 }
