--- a/css/agency.css
+++ b/css/agency.css
@@ -5,13 +5,13 @@
  */
 body {
   overflow-x: hidden;
-  font-family: "Merriweather", sans-serif;
+  font-family: 'Baloo Chettan', sans-serif;
 }
 .text-muted {
   color: #777777;
 }
 .text-primary {
-  color: #1C7D0B;
+  color: #00b500;
 }
 p {
   font-size: 14px;
@@ -28,13 +28,13 @@ a.active {
   outline: none;
 }
 a {
-  color: #1C7D0B;
+  color: #00b500;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #114e07;
+  color: #008200;
 }
 h1,
 h2,
@@ -42,7 +42,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -57,9 +57,9 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: #1C7D0B;
-  border-color: #1C7D0B;
-  font-family: "Special Elite", sans-serif;
+  background-color: #00b500;
+  border-color: #00b500;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -69,8 +69,8 @@ h6 {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #114e07;
-  border-color: #0f4506;
+  background-color: #008200;
+  border-color: #007800;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -92,18 +92,18 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #1C7D0B;
-  border-color: #1C7D0B;
+  background-color: #00b500;
+  border-color: #00b500;
 }
 .btn-primary .badge {
-  color: #1C7D0B;
+  color: #00b500;
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: #1C7D0B;
-  border-color: #1C7D0B;
-  font-family: "Special Elite", sans-serif;
+  background-color: #00b500;
+  border-color: #00b500;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   border-radius: 3px;
@@ -116,8 +116,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #114e07;
-  border-color: #0f4506;
+  background-color: #008200;
+  border-color: #007800;
 }
 .btn-xl:active,
 .btn-xl.active,
@@ -139,11 +139,11 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #1C7D0B;
-  border-color: #1C7D0B;
+  background-color: #00b500;
+  border-color: #00b500;
 }
 .btn-xl .badge {
-  color: #1C7D0B;
+  color: #00b500;
   background-color: white;
 }
 .navbar-custom {
@@ -151,50 +151,50 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: #1C7D0B;
-  font-family: "Special Elite", sans-serif;
+  color: #00b500;
+  font-family: 'Boogaloo', sans-serif;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #114e07;
+  color: #008200;
 }
 .navbar-custom .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-custom .navbar-toggle {
-  background-color: #1C7D0B;
-  border-color: #1C7D0B;
-  font-family: "Special Elite", sans-serif;
+  background-color: #00b500;
+  border-color: #00b500;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   color: white;
   font-size: 12px;
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #1C7D0B;
+  background-color: #00b500;
 }
 .navbar-custom .nav li a {
-  font-family: "Merriweather", sans-serif;
+  font-family: 'Baloo Chettan', sans-serif;
   font-weight: 400;
   letter-spacing: 1px;
   color: white;
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #1C7D0B;
+  color: #00b500;
   outline: none;
 }
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #1C7D0B;
+  background-color: #00b500;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #114e07;
+  background-color: #008200;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -241,14 +241,14 @@ header .intro-text {
   padding-bottom: 50px;
 }
 header .intro-text .intro-lead-in {
-  font-family: "Merriweather", sans-serif;
+  font-family: 'Baloo Chettan', sans-serif;
   font-style: italic;
   font-size: 22px;
   line-height: 22px;
   margin-bottom: 25px;
 }
 header .intro-text .intro-heading {
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 50px;
@@ -261,14 +261,14 @@ header .intro-text .intro-heading {
     padding-bottom: 200px;
   }
   header .intro-text .intro-lead-in {
-    font-family: "Merriweather", sans-serif;
+    font-family: 'Baloo Chettan', sans-serif;
     font-style: italic;
     font-size: 40px;
     line-height: 40px;
     margin-bottom: 25px;
   }
   header .intro-text .intro-heading {
-    font-family: "Special Elite", sans-serif;
+    font-family: 'Boogaloo', sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 75px;
@@ -291,7 +291,7 @@ section h4.player-heading {
 }
 section h3.section-subheading {
   font-size: 16px;
-  font-family: "Merriweather", sans-serif;
+  font-family: 'Baloo Chettan', sans-serif;
   text-transform: none;
   font-style: italic;
   font-weight: 400;
@@ -317,7 +317,7 @@ section h3.section-subheading {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
-  background: rgba(28, 125, 11, 0.9);
+  background: rgba(0, 181, 0, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -358,7 +358,7 @@ section h3.section-subheading {
   margin: 0;
 }
 #portfolio .portfolio-item .portfolio-caption p {
-  font-family: "Merriweather", sans-serif;
+  font-family: 'Baloo Chettan', sans-serif;
   font-style: italic;
   font-size: 16px;
   margin: 0;
@@ -425,7 +425,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #1C7D0B;
+  background-color: #00b500;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -580,31 +580,31 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: #1C7D0B;
+  border-color: #00b500;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   color: #eeeeee;
 }
 section#contact :-moz-placeholder {
   /* Firefox 18- */
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   color: #eeeeee;
 }
 section#contact ::-moz-placeholder {
   /* Firefox 19+ */
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   color: #eeeeee;
 }
 section#contact :-ms-input-placeholder {
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   color: #eeeeee;
@@ -618,14 +618,14 @@ footer {
 }
 footer span.copyright {
   line-height: 40px;
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   text-transform: none;
 }
 footer ul.quicklinks {
   margin-bottom: 0;
   line-height: 40px;
-  font-family: "Special Elite", sans-serif;
+  font-family: 'Boogaloo', sans-serif;
   text-transform: uppercase;
   text-transform: none;
 }
@@ -649,7 +649,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #1C7D0B;
+  background-color: #00b500;
 }
 .btn:focus,
 .btn:active,
@@ -681,7 +681,7 @@ ul.social-buttons li a:active {
 }
 .portfolio-modal .modal-content p.item-intro {
   margin: 20px 0 30px;
-  font-family: "Merriweather", sans-serif;
+  font-family: 'Baloo Chettan', sans-serif;
   font-style: italic;
   font-size: 16px;
 }
@@ -733,11 +733,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #1C7D0B;
+  background: #00b500;
 }
 ::selection {
   text-shadow: none;
-  background: #1C7D0B;
+  background: #00b500;
 }
 img::selection {
   background: transparent;
@@ -746,5 +746,5 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #1C7D0B;
+  webkit-tap-highlight-color: #00b500;
 }
