--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,7 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #1C7D0B;
+@theme-primary:    #00b500;
 @theme-danger:     #e74c3c;
 
 @gray-base:        #000;
