--- a/less/agency.less
+++ b/less/agency.less
@@ -6,6 +6,7 @@
 body {
     overflow-x: hidden;
     .body-font;
+    font-size: 18px;
 }
 
 .text-muted {
@@ -17,12 +18,12 @@ body {
 }
 
 p {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.75;
 }
 
 p.large {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 a,
@@ -228,9 +229,10 @@ section {
         
     }
     h4.player-heading {
+    .serif-font;
     font-size:30px;
     margin-top: 0;
-    magin-bottom: 15px;
+    margin-bottom: 15px;
     }
     
     
