Cobra-Bild optimierung/ Mobile-optimierung

--- a/less/bcagency.less
+++ b/less/bcagency.less
@@ -3,3 +3,16 @@
 .navbar-brand {
 	padding: 0px
 }
+.container.cobra{
+    background-image: url('../img/cobra.png');
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center center;
+    background-size: contain;
+    margin-top: 54px,
+}
+@media(min-width:768px) {
+	.container.cobra{
+		margin-top: 0;
+	}
+}
