--- a/css/bcagency.css
+++ b/css/bcagency.css
@@ -226,7 +226,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/header-bg.png');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -752,4 +752,17 @@ body {
 }
 .navbar-brand {
   padding: 0px;
+}
+.container.cobra {
+  background-image: url('../img/cobra.png');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: contain;
+  margin-top: 54px;
+}
+@media (min-width: 768px) {
+  .container.cobra {
+    margin-top: 0;
+  }
 }
