--- a/less/bcagency.less
+++ b/less/bcagency.less
@@ -1,7 +1,8 @@
 @import "agency.less";
 
 .navbar-brand {
-	padding: 0px
+	padding: 3px;
+	
 }
 .container.cobra{
     background-image: url('../img/cobra.png');
@@ -14,5 +15,8 @@
 @media(min-width:768px) {
 	.container.cobra{
 		margin-top: 0;
+	}
+	.navbar-brand {
+		padding: 0px;
 	}
 }
