--- a/less/bcagency.less
+++ b/less/bcagency.less
@@ -1,7 +1,7 @@
 @import "agency.less";
 
 .navbar-brand {
-	padding: 3px;
+	padding: 5px;
 	
 }
 .container.cobra{
@@ -10,7 +10,7 @@
     background-attachment: scroll;
     background-position: center center;
     background-size: contain;
-    margin-top: 54px,
+    margin-top: 54px;
 }
 @media(min-width:768px) {
 	.container.cobra{
