--- a/less/bcagency.less
+++ b/less/bcagency.less
@@ -1,7 +1,7 @@
 @import "agency.less";
 
 .navbar-brand {
-	padding: 5px;
+	padding: 4px;
 	
 }
 .container.cobra{
@@ -12,6 +12,15 @@
     background-size: contain;
     margin-top: 54px;
 }
+
+.bg-light-gray {
+    background-color: #e9cb63;
+}
+
+.bg-darkest-gray {
+    background-color: #8ec9b5;
+}
+
 @media(min-width:768px) {
 	.container.cobra{
 		margin-top: 0;
