--- a/less/variables.less
+++ b/less/variables.less
@@ -2,8 +2,12 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #00b500;
+@theme-primary:    #dd0734;
 @theme-danger:     #e74c3c;
+
+@cobra-green-dark: #116549;
+@cobra-green-middl: #22a982;
+@cobra-green-light: #8ec9b5;
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
