--- a/less/bcagency.less
+++ b/less/bcagency.less
@@ -21,6 +21,19 @@
     background-color: #8ec9b5;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	color: @cobra-green-dark;
+    
+}
+
+.timeline {
+    .timeline-heading {
+   		h1, h2, h3, h4, h5, h6 {
+   			color: @cobra-green-dark;
+   		}
+	}
+}
+
 @media(min-width:768px) {
 	.container.cobra{
 		margin-top: 0;
